# SmartMail

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
backend/: agent.py  chat_agent.py  config.py  database.py  email_agent.py  email_client.py  main.py  refine_agent.py
frontend/: package-lock.json  test.html
frontend/src/api/: email.js  request.js
frontend/src/components/: EmailCard.vue  EmailList.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: emailStore.js
frontend/src/views/: ChatAssistant.vue  EmailDashboard.vue
