[project]
name = "smartmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pymysql>=1.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "zhipuai>=2.1.5.20250825",
]
